--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,24 @@
 body {
-  background-color:rgb(9,36,46);
+  background-color: rgb(9, 36, 46);
+  font-family: 'Josefin Sans', sans-serif;
 }
 
-h1, h2 {
-  color: #F5F5F5;
+h1,
+h2 {
+  color: #f5f5f5;
   font-size: 1.8em;
 }
 
-p, li {
+p {
   font-size: 1.5em;
   color: #7c7c7c;
   letter-spacing: 1px;
+  word-break: keep-all;
 }
 
 a {
   text-decoration: none;
-  color: #F5F5F5;
+  color: #f5f5f5;
 }
 
 #contact a {
@@ -23,7 +26,7 @@ a {
 }
 
 #contact {
-  margin-top: 15px;
+  margin-top: 5px;
 }
 
 #page {
@@ -52,23 +55,25 @@ header {
   border-radius: 50%;
 }
 
+#content {
+  margin: 0 50px;
+}
+
 #work {
   line-height: 1.5;
 }
 
 @media (max-width: 810px) {
+  header {
+    flex: none;
+  }
 
-header {
-  flex:none;
-}
+  #page {
+    flex-direction: column;
+    width: auto;
+  }
 
-#page {
-  flex-direction: column;
-  width: auto;
-}
-
-#content {
-  margin: 15px 50px 0;
-}
-
+  #content {
+    margin: 15px 50px 0;
+  }
 }
